--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 DB_URL=mongodb+srv://admin:RFM20v3dQE4UuqiU@tool-7c2rf.mongodb.net/extra-tool?retryWrites=true&w=majority
+TOKEN_SECRET=ifthetimecancomeback
